# picsellia-training-engine

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Picsellia Training QuickStart.ipynb  Picsellia-Example.ipynb  Picsellia-Yolov5-Training.ipynb  PicselliaClassification.ipynb  PicselliaTrainingQuickStart.ipynb  README.md  app.py  docker-compose.yml  docker_run_classif_keras.py  launch_sub.py  picsell_utils.py  picsell_utils_old.py  pyproject.toml  rebuild_all.sh  rebuild_all_base.sh  rebuild_all_test.sh  rebuild_latest.sh  rebuild_picsellia.sh  rebuild_script.sh  rebuild_test.sh  requirements-dev.txt  requirements.txt  run_all_pytest_tests.sh  run_unit_tests.sh  start.sh  test.py  test_model_training_tf2.py  test_sdk.py  testing.py  tf1_training_od.py  tf2_training.py  tf_training_od.py  training_quickstart.ipynb  training_tf2.py  (+1 more)
.github/: CODEOWNERS  pull_request_template.md
ViT-classification/: Dockerfile  pyproject.toml  requirements.txt
ViT-classification-refactored/: Dockerfile  pyproject.toml  requirements.txt
ViT-classification-refactored/experiment/: main.py  trainer.py  utils.py
ViT-detection/: Dockerfile  pyproject.toml  requirements.txt
ViT-detection/experiment/: helpers.py  main.py  tests.py
ViT-detection/experiment/utils/: picsellia.py  vit.py
abstract_trainer/: trainer.py  yolov8_trainer.py
base/: run.sh
capture-run/: Dockerfile  requirements.txt
capture-run_test/: Dockerfile
captured-classification-ViT/: Dockerfile  requirements.txt
captured-classification-keras/: Dockerfile  requirements.txt
captured-detection-ViT/: pyproject.toml  requirements.txt
captured-training-classif/: Dockerfile  requirements.txt
captured-training-tf2/: Dockerfile  README.md  requirements.txt
captured-training-yolonas/: Dockerfile  requirements.txt
captured-training-yolov5/: Dockerfile  requirements.txt
captured-training-yolov5-detection/: Dockerfile  requirements.txt
captured-training-yolov5-segmentation/: Dockerfile  requirements.txt
poc-yolov8-classification/: pyproject.toml  test_training_pipeline.py
training-unet-instance-segmentation/: Dockerfile  pyproject.toml  requirements.txt  training-unet-picsellia.ipynb  unet-training-picsellia.ipynb
training-unet-instance-segmentation/modeling/: utils.py
training-unet-instance-segmentation/picsellia/: tests.py  trainer.py  utils.py
training-yolov8-classification/: Dockerfile  pyproject.toml  requirements.txt
training-yolov8-classification/picsellia/: helpers.py  main.py  tests.py  trainer.py  utils.py
unet-instance-segmentation/: Dockerfile  pyproject.toml  requirements.txt  tests.py  unet-training-picsellia.ipynb
unet-instance-segmentation/experiment/: main.py  tests.py  trainer.py  utils.py
unet-instance-segmentation/experiment/mask_to_polygon_converter/: abstract_converter.py  coco_annotations.py  convert_mask_to_polygon.py  convert_multilabel_masks_to_polygons.py  custom_converter.py  utils.py
yolov9-segmentation/: Dockerfile  pyproject.toml  requirements.txt
yolov9-segmentation/experiment/: main.py  segmentation_trainer.py  trainer.py
yolox-detection/: Dockerfile  experiment.py  pyproject.toml  requirements.txt  tests.py  yolox-training-picsellia.ipynb  yolox-training-picsellia.py
yolox-detection/YOLOX/demo/ONNXRuntime/: onnx_inference.py
yolox-detection/YOLOX/demo/OpenVINO/python/: openvino_inference.py
yolox-detection/YOLOX/demo/nebullvm/: README.md
yolox-detection/YOLOX/exps/example/custom/: nano.py
yolox-detection/YOLOX/tools/: train.py  trt.py
yolox-detection/YOLOX/yolox/core/: trainer.py
yolox-detection/YOLOX/yolox/data/: dataloading.py
yolox-detection/YOLOX/yolox/data/datasets/: coco.py
yolox-detection/YOLOX/yolox/exp/: __init__.py  build.py  yolox_base.py
yolox-detection/YOLOX/yolox/models/: yolo_head.py
yolox-detection/YOLOX_outputs/yolox_m/: train_log.txt
yolox-detection/YOLOX_outputs/yolox_s/: train_log.txt
yolox-detection/experiment/: main.py  test.py  test_augmentations.py  trainer.py  utils.py  yolox_evaluator.py
yolox-detection/experiment/YOLOX/: hubconf.py
yolox-detection/experiment/YOLOX/demo/MegEngine/python/: demo.py
yolox-detection/experiment/YOLOX/demo/OpenVINO/: README.md
yolox-detection/experiment/YOLOX/demo/nebullvm/: nebullvm_optimization.py
yolox-detection/experiment/YOLOX/exps/default/: yolov3.py  yolox_m.py  yolox_nano.py  yolox_s.py  yolox_tiny.py  yolox_x.py
yolox-detection/experiment/YOLOX/exps/example/custom/: nano.py
yolox-detection/experiment/YOLOX/exps/example/yolox_voc/: yolox_voc_s.py
yolox-detection/experiment/YOLOX/tests/utils/: test_model_utils.py
yolox-detection/experiment/YOLOX/tools/: demo.py  eval.py  export_onnx.py  export_torchscript.py  train.py  trt.py  visualize_assign.py
yolox-detection/experiment/YOLOX/yolox/core/: __init__.py  launch.py  trainer.py
yolox-detection/experiment/YOLOX/yolox/data/: __init__.py  data_augment.py  data_augment_v2.py  data_augment_v3.py
yolox-detection/experiment/YOLOX/yolox/data/datasets/: __init__.py  coco.py  datasets_wrapper.py  mosaicdetection.py  voc.py
yolox-detection/experiment/YOLOX/yolox/evaluators/: __init__.py  coco_evaluator.py  voc_evaluator.py
yolox-detection/experiment/YOLOX/yolox/exp/: base_exp.py  build.py  yolox_base.py
yolox-detection/experiment/YOLOX/yolox/exp/default/: __init__.py
yolox-detection/experiment/YOLOX/yolox/layers/: __init__.py  jit_ops.py
yolox-detection/experiment/YOLOX/yolox/models/: __init__.py  build.py  yolo_head.py
yolox-detection/experiment/YOLOX/yolox/tools/: __init__.py
yolox-detection/experiment/YOLOX/yolox/utils/: __init__.py  dist.py  metric.py  visualize.py
(+721 files in other folders)
