[tool.poetry]
name = "vit-classification-refactored"
version = "0.1.0"
description = ""
authors = ["hajeressef <hajer.essefi@picsellia.com>"]
readme = "README.md"
packages = [{include = "vit_classification_refactored"}]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "2.14.1"
evaluate = "0.4.0"
numpy = "1.25.1"
picsellia = "6.9.0"
pycocotools = "2.0.6"
torchvision = "0.15.2"
transformers = "4.31.0"
scikit-learn = "1.3.0"
accelerate = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
