[tool.poetry]
name = "captured-detection-vit"
version = "0.1.0"
description = ""
authors = ["SoniaGrh <sonia.garrouch@hotmail.fr>"]
readme = "README.md"
packages = [{include = "captured_detection_vit"}]

[tool.poetry.dependencies]
python = "^3.10"
albumentations = "1.3.1"
timm = "0.9.5"
transformers = "4.32.1"
datasets = "2.14.1"
evaluate = "0.4.0"
numpy = "1.25.2"
Pillow = "9.5.0"
torch = "2.0.1"
torchvision = "0.15.2"
tqdm = "4.66.1"
picsellia = "6.10.0"
accelerate = "0.22.0"
pycocotools = "2.0.6"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
