[tool.poetry]
name = "training-unet-instance-segmentation"
version = "0.1.0"
description = ""
authors = ["Hajer Essefi <hajer.essefi@picsellia.com>"]
readme = "README.md"
packages = [{ include = "training-unet-instance-segmentation" }]

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "2.13.0"
segmentation-models = "1.0.1"
albumentations = "1.3.1"
imgaug = "0.4.0"
picsellia = "6.10.2"
coverage = "7.3.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"