[tool.poetry]
name = "training-yolov8-classification"
version = "0.1.0"
description = ""
authors = ["hajer <hajer.essefi@picsellia.com>"]
readme = "README.md"
packages = [{include = "training-yolov8-classification"}]

[tool.poetry.dependencies]
python = "^3.11"
pycocotools = "2.0.6"
ultralytics = "8.0.67"
onnx = "1.13.1"
scikit-learn = "1.2.2"
coverage = "7.3.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"