[tool.poetry]
name = "training-unet-instance-segmentation"
version = "0.1.0"
description = ""
authors = ["Hajer Essefi <hajer.essefi@picsellia.com>"]
readme = "README.md"
packages = [{ include = "training-unet-instance-segmentation" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "2.10.0"
segmentation-models = "1.0.1"
albumentations = "1.3.1"
imgaug = "0.4.0"
picsellia = "6.10.2"
coverage = "7.3.1"
fuzzywuzzy = "^0.18.0"
pycocotools = "^2.0.7"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"