[tool.poetry]
name = "yolov8-segmentation"
version = "0.1.0"
description = ""
authors = ["hajer <hajer.essefi@picsellia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycocotools = "2.0.6"
ultralytics = "8.0.67"
onnx = "1.13.0"
coverage = "7.3.0"
picsellia = "^6.10.3"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
