[tool.poetry]
name = "yolox-detection"
version = "0.1.0"
description = ""
authors = ["picsalex <132259399+picsalex@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
torch = "^2.1.2"
numpy = "^1.26.2"
loguru = "^0.7.2"
torchvision = "^0.16.2"
opencv-python = "^4.8.1.78"
psutil = "^5.9.7"
tensorboard = "^2.15.1"
packaging = "^23.2"
pycocotools = "^2.0.7"
tqdm = "^4.66.1"
thop = "^0.1.1.post2209072238"
ninja = "^1.11.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
