[tool.poetry]
name = "experiment"
version = "0.1.0"
description = ""
authors = ["SoniaGrh <sonia.garrouch@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.1.2"
torchvision = "0.16.2"
opencv-python = "4.8.1.78"
picsellia = "^6.11.0"
onnx = "1.15.0"
numpy = "1.26.2"
loguru = "^0.7.2"
pycocotools = "^2.0.7"
tabulate = "^0.9.0"
tqdm = "^4.66.1"
tensorboard = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
